# DevMate

./: AGENTS.md  Cargo.toml  README.md  RELEASE_CHECKLIST.md  install.sh  package.json
.claude/: settings.json
.githooks/: pre-commit
.github/workflows/: lint.yml  release.yml
01-core-daemon/sections/: section-02-config.md  section-03-logger.md  section-05-cli-commands.md
01-core-daemon/src/: index.ts
02-integration-clients/: index.ts  package.json  tsconfig.json
02-integration-clients/sections/: section-01-foundation.md  section-02-adf-helpers.md  section-05-claude.md
02-integration-clients/src/: errors.ts  index.ts
02-integration-clients/tests/: adf.test.ts  claude.test.ts  errors.test.ts
03-command-handlers/sections/: section-02-auth-middleware.md  section-03-utils.md  section-06-solve-handler.md
04-distribution/sections/: section-02-binary-targets.md  section-03-checksums-generation.md  section-04-install-core.md  section-07-readme.md  section-08-tests.md
deep-implements/: deep_project_interview.md  project-manifest.md
deep-implements/01-core-daemon/: spec.md
deep-implements/03-command-handlers/: claude-plan.md  claude-spec.md
deep-implements/04-distribution/: claude-plan.md  claude-spec.md
src/: index.ts  main.rs
src/bot/: bot.rs  bot.ts  mod.rs  polling.rs  state.rs
src/claude/: ClaudeClient.ts  client.rs  mod.rs  types.rs  types.ts
src/commands/: add_project_cmd.rs  clone_cmd.rs  config.ts  config_cmd.rs  daemon.ts  daemon_cmd.rs  logs.ts  logs_cmd.rs  mod.rs  slackmap_cmd.rs  start.ts  start_cmd.rs  stop.ts  (+5 more)
tests/: install.bats
(+110 files in other folders)
