[package]
name = "devm8"
version = "0.1.0"
edition = "2021"
default-run = "devm8"

[[bin]]
name = "devm8"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.13", features = ["macros", "throttle"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
base64 = "0.22"
regex = "1"
sha2 = "0.10"
hex = "0.4"
url = "2"
inquire = "0.7"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
sysinfo = "0.32"
dashmap = "6"
tokio-util = { version = "0.7", features = ["codec", "io"] }
futures-util = "0.3"
bytes = "1"
